Add type=tel as an option for zem_contact_text

--- a/README.textile
+++ b/README.textile
@@ -155,6 +155,7 @@ h4. Attributes
 ** @time@
 ** @search@
 ** @color@
+** @tel@
 * @label="text"@<br />Text label displayed to the user. Default is @Text@.
 * @name="value"@<br />Field name, as used in the HTML @<input>@ tag.
 * @break="tag"@<br />Break tag between the @<label>@ and @<input>@ field. Default is @<br />@. Use @break=""@ to put the label and input field on the same line.
