--- a/README.textile
+++ b/README.textile
@@ -18,9 +18,11 @@ h2. Features
 
 h2. Installation, upgrading and uninstallation
 
-Download the latest version of the plugin from "the GitHub project page":https://github.com/Bloke/zem_contact_reborn, paste the code into the Textpattern Admin → Plugins pane, install and enable the plugin. Visit the "forum thread":http://forum.textpattern.com/viewtopic.php?id=23728 for more info or to report on the success or otherwise of the plugin.
+Download the latest version of the plugin from "the GitHub project page":https://github.com/Bloke/zem_contact_reborn/releases, paste the code into the Textpattern Admin → Plugins panel, install and enable the plugin. Visit the "forum thread":http://forum.textpattern.com/viewtopic.php?id=23728 for more info or to report on the success or otherwise of the plugin.
 
-To uninstall, delete from the Admin → Plugins page.
+Note that the language strings are part of the plugin itself, so if you are upgrading from v4.0.3.20 or earlier, disable or remove the zem_contact_lang plugin. If you have a translation Textpack available that is not yet incorporated, please submit it for inclusion.
+
+To uninstall, delete from the Admin → Plugins panel.
 
 h2. Usage
 
@@ -683,7 +685,7 @@ Set the @label@ attribute to an empty value (@label=""@) in the @zem_contact@ ta
 
 h5. No email is sent. How do I diagnose and fix the problem?
 
-First try a simple contact form, using only the @zem_contact@ tag with the @to@ attribute set to a valid email address. If that doesn't send email, fill out the 'SMTP envelope sender address' field in Textpattern's preferences page on the admin tab. If that doesn't help either, take a look at your mail server log files to see what the problem is.
+First try a simple contact form, using only the @zem_contact@ tag with the @to@ attribute set to a valid email address. If that doesn't send email, fill out the 'SMTP envelope sender address' field in Textpattern's Admin → Preferences panel on the admin tab. If that doesn't help either, take a look at your mail server log files to see what the problem is.
 
 h5. Which tag do I use to create the submit button?
 
